{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 962,
  "lineage": "f7c685d6-1b62-868f-ef88-3de9c6a78ec3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "caustaza_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:309316407602:vpc/vpc-007f7ef3c669fcf8d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-0ff55cec27f4fb51e",
            "default_route_table_id": "rtb-0582d39443847e31d",
            "default_security_group_id": "sg-0a2bd4ac907bba794",
            "dhcp_options_id": "dopt-0f303f8327b877d36",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-007f7ef3c669fcf8d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0582d39443847e31d",
            "owner_id": "309316407602",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-030633f630317131c",
            "arn": "arn:aws:ec2:eu-west-3:309316407602:instance/i-0dd71218a19644bb8",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dd71218a19644bb8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b8a5254af8a698c3",
            "private_dns": "ip-172-20-1-133.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.1.133",
            "public_ip": "15.237.194.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-030ddad364ba61222",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d685c55146056a4e",
            "tags": {
              "Name": "dev-bastion"
            },
            "tags_all": {
              "Name": "dev-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a1dee11072defbf2"
            ]
          },
          "dependencies": [
            "aws_vpc.caustaza_vpc",
            "module.bastion.aws_key_pair.bastion-key-pair",
            "module.bastion.aws_security_group.jumpserver_sc",
            "module.bastion.data.aws_ami.ubuntu_20_04",
            "module.subnets.aws_subnet.pub_sub_1a"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jumpserver_sc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:309316407602:security-group/sg-0a1dee11072defbf2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1dee11072defbf2",
            "ingress": [
              {
                "cidr_blocks": [
                  "197.31.150.159/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-bastion-sc",
            "name_prefix": "",
            "owner_id": "309316407602",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-bastion-sc"
            },
            "tags_all": {
              "Name": "dev-bastion-sc"
            },
            "timeouts": null,
            "vpc_id": "vpc-007f7ef3c669fcf8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.caustaza_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.caustaza-ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:309316407602:security-group/sg-00d9f53159b5155e4",
            "description": "Allow SSH from jumpserver",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d9f53159b5155e4",
            "ingress": [
              {
                "cidr_blocks": [
                  "197.31.150.159/32"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 60000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a1dee11072defbf2"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-ecs_sc",
            "name_prefix": "",
            "owner_id": "309316407602",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-007f7ef3c669fcf8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.caustaza_vpc",
            "module.bastion.aws_security_group.jumpserver_sc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09ae06a6bdf9da92f",
            "domain": "vpc",
            "id": "eipalloc-09ae06a6bdf9da92f",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-13-39-65-38.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.39.65.38",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "caustaza-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:309316407602:internet-gateway/igw-047be3b3ef43d2c28",
            "id": "igw-047be3b3ef43d2c28",
            "owner_id": "309316407602",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-007f7ef3c669fcf8d"
          },
          "dependencies": [
            "aws_vpc.caustaza_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09ae06a6bdf9da92f",
            "association_id": "eipassoc-03e63ab27d5cc19c6",
            "connectivity_type": "public",
            "id": "nat-0b47e460d4c793502",
            "network_interface_id": "eni-0a109c6e60a875920",
            "private_ip": "172.20.1.38",
            "public_ip": "13.39.65.38",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d685c55146056a4e"
          },
          "dependencies": [
            "aws_vpc.caustaza_vpc",
            "module.subnets.aws_eip.nat_eip_1",
            "module.subnets.aws_subnet.pub_sub_1a"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:309316407602:route-table/rtb-016e391ce5c399e9e",
            "id": "rtb-016e391ce5c399e9e",
            "owner_id": "309316407602",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b47e460d4c793502",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-007f7ef3c669fcf8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.caustaza_vpc",
            "module.subnets.aws_eip.nat_eip_1",
            "module.subnets.aws_nat_gateway.nat_gateway_1",
            "module.subnets.aws_subnet.pub_sub_1a"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:309316407602:route-table/rtb-0a47985d617ce9083",
            "id": "rtb-0a47985d617ce9083",
            "owner_id": "309316407602",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-047be3b3ef43d2c28",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-rt"
            },
            "tags_all": {
              "Name": "dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-007f7ef3c669fcf8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.caustaza_vpc",
            "module.subnets.aws_internet_gateway.caustaza-igw"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_sub_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e264d64a1d4dbfc9",
            "route_table_id": "rtb-016e391ce5c399e9e",
            "subnet_id": "subnet-03a81ad8f2f0ff6a1"
          },
          "dependencies": [
            "aws_vpc.caustaza_vpc",
            "module.subnets.aws_eip.nat_eip_1",
            "module.subnets.aws_nat_gateway.nat_gateway_1",
            "module.subnets.aws_route_table.private_route_table",
            "module.subnets.aws_subnet.priv_sub_3a",
            "module.subnets.aws_subnet.pub_sub_1a"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_sub_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8e4105c39360804",
            "route_table_id": "rtb-016e391ce5c399e9e",
            "subnet_id": "subnet-089e454902ff32edb"
          },
          "dependencies": [
            "aws_vpc.caustaza_vpc",
            "module.subnets.aws_eip.nat_eip_1",
            "module.subnets.aws_nat_gateway.nat_gateway_1",
            "module.subnets.aws_route_table.private_route_table",
            "module.subnets.aws_subnet.priv_sub_4b",
            "module.subnets.aws_subnet.pub_sub_1a"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_sub_association_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c304b2170c94352",
            "route_table_id": "rtb-016e391ce5c399e9e",
            "subnet_id": "subnet-025918184b65e7b64"
          },
          "dependencies": [
            "aws_vpc.caustaza_vpc",
            "module.subnets.aws_eip.nat_eip_1",
            "module.subnets.aws_nat_gateway.nat_gateway_1",
            "module.subnets.aws_route_table.private_route_table",
            "module.subnets.aws_subnet.priv_sub_5a",
            "module.subnets.aws_subnet.pub_sub_1a"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_sub_association_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02841dcc94b84345b",
            "route_table_id": "rtb-016e391ce5c399e9e",
            "subnet_id": "subnet-03a8f50757d49cbf1"
          },
          "dependencies": [
            "aws_vpc.caustaza_vpc",
            "module.subnets.aws_eip.nat_eip_1",
            "module.subnets.aws_nat_gateway.nat_gateway_1",
            "module.subnets.aws_route_table.private_route_table",
            "module.subnets.aws_subnet.priv_sub_6b",
            "module.subnets.aws_subnet.pub_sub_1a"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-sub-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b0d4e1c9cddbc92",
            "route_table_id": "rtb-0a47985d617ce9083",
            "subnet_id": "subnet-0d685c55146056a4e"
          },
          "dependencies": [
            "aws_vpc.caustaza_vpc",
            "module.subnets.aws_internet_gateway.caustaza-igw",
            "module.subnets.aws_route_table.public_route_table",
            "module.subnets.aws_subnet.pub_sub_1a"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-sub-association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02be2c1d84471311e",
            "route_table_id": "rtb-0a47985d617ce9083",
            "subnet_id": "subnet-0f5af7abcfc8bfd06"
          },
          "dependencies": [
            "aws_vpc.caustaza_vpc",
            "module.subnets.aws_internet_gateway.caustaza-igw",
            "module.subnets.aws_route_table.public_route_table",
            "module.subnets.aws_subnet.pub_sub_2b"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv_sub_3a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:309316407602:subnet/subnet-03a81ad8f2f0ff6a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "172.20.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a81ad8f2f0ff6a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309316407602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv_sub_3a"
            },
            "tags_all": {
              "Name": "priv_sub_3a"
            },
            "vpc_id": "vpc-007f7ef3c669fcf8d"
          },
          "dependencies": [
            "aws_vpc.caustaza_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv_sub_4b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:309316407602:subnet/subnet-089e454902ff32edb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "172.20.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089e454902ff32edb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309316407602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv_sub_4b"
            },
            "tags_all": {
              "Name": "priv_sub_4b"
            },
            "vpc_id": "vpc-007f7ef3c669fcf8d"
          },
          "dependencies": [
            "aws_vpc.caustaza_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv_sub_5a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:309316407602:subnet/subnet-025918184b65e7b64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "172.20.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025918184b65e7b64",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309316407602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv_sub_5a"
            },
            "tags_all": {
              "Name": "priv_sub_5a"
            },
            "vpc_id": "vpc-007f7ef3c669fcf8d"
          },
          "dependencies": [
            "aws_vpc.caustaza_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv_sub_6b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:309316407602:subnet/subnet-03a8f50757d49cbf1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "172.20.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a8f50757d49cbf1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309316407602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv_sub_6b"
            },
            "tags_all": {
              "Name": "priv_sub_6b"
            },
            "vpc_id": "vpc-007f7ef3c669fcf8d"
          },
          "dependencies": [
            "aws_vpc.caustaza_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:309316407602:subnet/subnet-0d685c55146056a4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "172.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d685c55146056a4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309316407602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_sub_1a"
            },
            "tags_all": {
              "Name": "pub_sub_1a"
            },
            "vpc_id": "vpc-007f7ef3c669fcf8d"
          },
          "dependencies": [
            "aws_vpc.caustaza_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:309316407602:subnet/subnet-0f5af7abcfc8bfd06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "172.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5af7abcfc8bfd06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309316407602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_sub_2b"
            },
            "tags_all": {
              "Name": "pub_sub_2b"
            },
            "vpc_id": "vpc-007f7ef3c669fcf8d"
          },
          "dependencies": [
            "aws_vpc.caustaza_vpc"
          ]
        }
      ]
    }
  ]
}